--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,7 @@
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </head>
 <body>
-    <nav class="navbar navbar-inverse site-navbar">
+    <nav class="navbar navbar-inverse navbar-fixed-top site-navbar">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -30,14 +30,14 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{% url 'home' %}">首页</a>
                     </li>
-                    <li><a href="docs/">学院</a>
+                    <li><a href="{% url 'courses' %}">课程</a>
                     </li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
         </div>
     </nav>
-    <div class="container" style="max-width: 950px; height: 1000px; margin-top: 50px; margin-bottom: 50px;">
+    <div class="container" style="max-width: 950px; margin-top: 100px; margin-bottom: 50px;">
         {% block content %}{% endblock %}
     </div>
 </body>
